--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,101 +2,56 @@
 
 <html lang="es">
     <head>
-        <title>Tienda en linea</title>
+        <title>Reptile World</title>
         <meta charset="UTF-8">
         <meta name="description" content="Está pagina contiene ettiquetas del tipo html">
         <meta name="keywords" content="html5, css3, web">
-        <link href="css/menu.css" rel="stylesheet" type="text/css"/>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header class="header"> <!-- Etiqueta para ofrecerle al browser info de que es un encabezado-->       
             <nav class="nav"> <!-- Etiqueta para ilustrarle al browser que posiblemente es una menú-->
-                <a href="index.html" class="logo nav-link">TechShop</a>
-                <ul class="nav-menu">
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo9.html">&LeftTriangleBar;</a></li>
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="ejemplo2.html">&RightTriangleBar;</a></li>
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="audios.html">Audios</a></li>                
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="videos.html">Videos</a></li>                
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="iframes.html">Iframe</a></li>                
-                    <li class="nav-menu-item"><a class="nav-menu-link nav-link" href="formulario.html">Formulario</a></li>                
-                </ul>
-                
-                
+                <a href="index.html" class="logo nav-link">Reptile World</a>
+                <div class="nav-menu">
+                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="cocodrilos.html">Cocodrilos</a></div>
+                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="lagartos.html">Lagartos</a></div>
+                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="serpientes.html">Serpientes</a></div>                
+                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="tuataras.html">Tuataras</a></div>                
+                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="tortugas.html">Tortugas</a></div>                
+                    <div class="nav-menu-item"><a class="nav-menu-link nav-link" href="informacion.html">Información</a></div>                
+                </div>                             
             </nav>
-        </header>
-        <aside id="barralateral"> <!-- Etiqueta para indicar que es una barra lateral final -->
-            <h2>Productos más vendidos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit cubilia faucibus vel sem, tincidunt nibh dui aptent turpis eu lobortis tristique facilisis. Et cursus magna purus leo turpis augue sodales facilisi faucibus, felis metus arcu aptent egestas dictumst hendrerit quam sociosqu, odio viverra dis luctus penatibus libero mollis integer. Eros hendrerit gravida conubia consequat eleifend est felis, integer feugiat quis montes dignissim donec blandit ut, neque viverra magnis placerat nunc eget.</p>
-        </aside>
-        <section id="contenido">
-            <h2>Articulos principales</h2>
-            <article>
-                <header>Portatil XRT 5000</header>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <footer>Agregar al carrito</footer>
+        </header>        
+        <div>
+            <div>                          
+                <h1>¿Que son los reptiles? Características generales</h1>
+                <p>Los reptiles son animales que se caracterizan por su piel, recubiertas con escamas o por un caparazón protector como es el caso de las tortugas, y además por su forma de desplazarse muy particular: arrastrando el vientre por la superficie. A pesar de estas características y de que muchas especies viven largo tiempo dentro del agua, tienen respiración pulmonar.</p>
                 <figure>
-                    <img src='images/asus.jpg' alt='Portatil' style='height: 504px; width: 350px;'/>
-                    <figcaption>Más vendido</figcaption>
+                    <img src="fotos/serpiente-azul.jpg" alt="serpiente" style="height: 200px; width: 400;"/>            
                 </figure>
-            </article>
-            <article>
-                <header>Alienware ATD 9000</header>
-                <p>Está inspirada en la pelicula <cite>Aliens el octavo pasajero</cite>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <footer>Agregar al carrito</footer>   
-                <figure>
-                    <img src='images/alienware.jpg' alt='Alienware'/>
-                    <figcaption>Más vendido</figcaption>
-                </figure>
-            </article>
-            <article>
-                <header>Impresora 3D portable</header>
-                <p>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <footer>Agregar al carrito</footer>    
-                <figure>
-                    <img src='images/impresora3d.jpg' alt='imp3d' />
-                    <figcaption>Más vendido</figcaption>
-                </figure>
-            </article>    
-            <article>
-                <header>Resumen de lineas generales</header>
-                <p>erat volutpat dignissim orci ornare ridiculus fames. Varius enim fermentum augue sed taciti, in parturient semper risus, sodales molestie aliquet conubia. Nisi et congue augue ante primis curae feugiat, est nunc condimentum lacus metus mauris magna donec, netus per interdum libero commodo nibh. Justo interdum praesent leo pellentesque posuere congue cursus egestas fusce urna orci placerat class velit, nunc risus imperdiet litora et dis scelerisque porta tempor iaculis nec parturient torquent.</p>      
-                <table border="0">
-                    <thead>
-                        <tr id="encabezadoTabla">
-                            <th>Codigo</th>
-                            <th>Detalle</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tablaResumen">
-                        <tr>
-                            <td>1</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipiscing elit vel, </td>
-                        </tr>
-                        <tr>
-                            <td>6</td>
-                            <td>porttitor sodales commodo placerat taciti libero hendrerit justo maecenas, </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-            </article> 
-        </section>
-        <footer id="piedepagina">Derechos reservados &COPY; 2022 <address style="display: inline;">Tel 8889-7744</address></footer>
+                <p>Los reptiles son generalmente carnívoros pero los hay también herbívoros y omnívoros. Todos son ovíparos, nacen de un huevo. La única especie que no tiene cuatro patas es la de las serpientes. La mayoría son cazadores y algunos venenosos o constrictores, por lo que son animales exóticos y no son mascotas domésticas.</p>
+            </div>
+            <div>                          
+                <h1>El origen de los reptiles</h1>
+                <p>Básicamente, la evolución de estos seres vivos a través de la historia del planeta es realmente maravillosa y un ejemplo de transformación y de capacidad de adaptarse a los diferentes medios.
+                Los primeros que colonizaron la tierra firme fueron los anfibios hace millones de años. Sin embargo, no les fue fácil adaptarse a la vida terrestre y por un tiempo fueron semiacuáticos. Finalmente, lograron evolucionar para obtener tres características esenciales: transformar las larvas acuáticas en huevos de cáscara dura; la mutación de la piel en escamas y piel dura y una nueva forma de respirar. </p>
+            </div>
+            <div>                          
+                <h1>Clasificacion de los reptiles</h1>
+                <p>La clasificación por tipos u órdenes de reptiles se divide en cuatro grandes grupos:</p>
+                <ul>
+                    <li>Escamosos: lagartos y serpientes con más de tres mil especies.</li>
+                    <li>Tortugas, más de trescientas especies</li>
+                    <li>Tuátaras, dos únicas especies</li>
+                    <li>Cocodrilos, más de veinte especies.</li>
+                </ul>
+            </div>
+            <div>                          
+                <h1>Alimentacion de los reptiles</h1>
+                <p>La mayoría de los reptiles tienen una alimentación combinada, pero también hay un grupo que es estrictamente cazador y carnívoro como las serpientes y cocodrilos.</p>
+                <p>Por otro lado, hay muchas especies de reptiles que se alimentan de insectos. En general, los reptiles insectívoros tienen lenguas largas y con gran movimiento para atrapar sus presas, como lo hacen los camaleones. Asimismo, muchas especies de lagartijas se alimentan de moscas, pequeñas arañas y hormigas. </p>
+            </div>
+        </div>
+        <footer>Derechos reservados &COPY; 2022</footer>
     </body>
 </html>
